# cache-sim

./: .gitignore  Cargo.toml  README.md  distances.csv  histogram maker.py  histogram_maker.py  test.csv
.github/workflows/: coverage.yml
src/: atf.rs  atftransformerforLUN.py  cache.rs  condition.rs  histogram_maker.py  input.txt  item.rs  lib.rs  main.rs  output.rs  replacement_policy.rs  stats.rs  trace.rs
src/histograms/: linear-function-data.csv  stack-distances-prefix4.xlsx  stack-distances.csv  ~$stack-distances-prefix4.xlsx
src/traces/: ycsb-sample.atf
src/traces/scripts/: blktracetoatf.py  k5cloudtoatf.py  lun_transformer.py  modal_trace_generator.py  nexustoatf.py  offset_reducer.py  scan_trace_generator.py  tencenttoatf.py  trace_generator.py
