[package]
name = "cache-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
csv = "1.1.6"
impl-trait-for-tuples = "0.2.2"
itertools = "0.10"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
